[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "cortex-m-quickstart"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
stm32f0xx-hal = { version = "0.18", features = ["stm32f030"]}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f0]
features = ["stm32f0x0", "rt"]
version = "0.15"

# this lets you use `cargo fix`!
[[bin]]
name = "cortex-m-quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
